# newtonRaphson

./: .gitignore  CMakeLists.txt  deleteme
inMemoryCacheService/: cache.py.ipynb  inMemoryCache.py  myCache.py  readme  requirements.txt  rest.py  restService.py  testing.py  testing0.py  user_data.xml  webService.py
inMemoryCacheService/backup/: testing.py
newton-raphson/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  autogen.sh  clean.sh  configure.ac  get.sh  main.cpp  rootproject.cbp  toDo.txt  toto.cpp
newton-raphson/include/: derivative.hpp  mainNR.hpp  newton-raphson.hpp  topologyStrategy.hpp
newton-raphson/include/newtonRaphson/: derivative.hpp  mainNR.hpp  newton-raphson.hpp  topologyStrategy.hpp  types.hpp
newton-raphson/latex/: Makefile  Makefile.am  newton-raphson.bbl  newton-raphson.tex  references.bib
newton-raphson/lib/: Makefile.am  foobar.cpp
newton-raphson/objectFactory/: toto
newton-raphson/patterns/: abstractFactory.cpp  documentManager.cpp  shape.cpp  singleton.cpp  toto
newton-raphson/src/: CMakeLists.txt  Makefile.am  foobar.cpp  foobar1.cpp  foobar2.cpp
newton-raphson/test1/src/: CMakeLists.txt  test1.cpp
newton-raphson/testingCMake/: CMakeLists.txt
newton-raphson/testingCMake/test1/: CMakeLists.txt
newton-raphson/tests/: CMakeLists.txt  Makefile  mainRunner.cpp  testDerivative.cpp  testNewtonRaphson.cpp  testNewtonRaphson.hpp
newton-raphson/tests/include/: incl.hpp  testDerivative.hpp  testNewtonRaphson.hpp
newton-raphson/tests/src/: CMakeLists.txt  Makefile.am  testDerivative.cpp  testNewtonRaphson.cpp
newton-raphson/tmp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
newton-raphson/tmp/project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
newton-raphson/tmp/project/include/: foobar1.hpp  foobar2.hpp
newton-raphson/tmp/project/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  foobar1.cpp  foobar2.cpp
resume/: addition.txt  coverLetterTemplate.txt  letter.tex  resume.tex  resume.txt
tensorflow/: MarketDataNotebook.ipynb  tensor.py  tensorflowFirstEquation.ipynb
